compiler/tests/sct-checker/success/movmsf.jazz
fn reset_msf() -> #msf reg u64 {
  reg u64 msf;
  msf = #init_msf();
  return msf;
}

fn main(reg u64 x) {
  stack u64[1] tab;
  reg u64 msf;
  msf = #init_msf();
  tab[0] = 0;
  if x < 1 {
    x = tab[x];
    msf = reset_msf();
    x = #protect(x, msf);
    [x] = 0;
  }
}
